--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <a class="nav-link" href="#">El lugar y la fecha</a>
                   <a class="nav-link">Conviertete en orador</a>
                 </div>
-                <a class="comprar-tickets" >Comprar tickets</a>
+                <a href="http://127.0.0.1:5501/index.html" target="_blank" class="comprar-tickets" >Comprar tickets</a>
               </div>
             </div>
           </nav>
